--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -28,6 +28,7 @@
 .stone {
   width: 56px;
   height: 56px;
+  line-height: 56px;
   color: #fff;
   text-align: center;
   background-color: white;
